<resources>
    <string name="app_name">BoraRachar</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="_0_00">Quantia</string>
    <string name="_0">Pessoas</string>
    <string name="zero">0,00</string>
    <string name="cone_de_pessoas">Ícone de pessoas</string>
    <string name="bora_rachar_icone">Bora rachar Icone</string>
    <string name="falar_valor">Falar Valor</string>
    <string name="r">R$</string>
    <string name="dinheiro_icone">Dinheiro icone</string>
</resources>